# post-training-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  generate_text_mlx.py  grpo_train_mlx.py  pyproject.toml  sft_train_mlx.py  train_sft_mlx.py
data_prep/: __init__.py  gsm8k.py  magpie_reasoning.py
data_preperation/: __init__.py  gsm8k.py  gsm8k_grpo.py  magpie_reasoning.py
utils/: generate_text_mlx.py
