[project]
name = "post-training-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "lm-eval>=0.4.12",
    "mlx>=0.31.1",
    "mlx-lm>=0.31.2",
    "setuptools==81.0.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
